# RayTracer

./: LICENSE  Makefile  README.md
RTv1/: CMakeLists.txt  Makefile  RTv1  camera.c  color.c  cylinder_cone.c  extra.c  hyperboloid.c  ini.h  intersections.c  main.c  mtx_op.c  operations.c  parsing.c  polynomials.c  raytracing.c  recurtion.c  rtv1.h  scene.c  test.ini  test2.ini  test3.ini  tools.c  tortus.c
RTv1/libft/: Makefile  ft_atoi.c  ft_isalpha.c  ft_isascii.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdelone.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_putchar.c  ft_putchar_fd.c  ft_putnbr.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strmapi.c  ft_strncmp.c  ft_strnew.c  ft_strrchr.c  ft_tolower.c  ft_toupper.c  get_next_line.h
includes/: rtv1.h
libft/: Makefile  author  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memcpy_old.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_range.c  ft_str_is_alpha.c  ft_str_is_numeric.c  ft_strcapitalize.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+28 more)
scenes/: chain.ini  cone.ini  cylinder.ini  deep_space.ini  parabola.ini  pills.ini  scene1.ini  scene2.ini  sphere.ini
src/: camera.c  color.c  cylinder_cone.c  extra.c  hyperboloid.c  intersections.c  main.c  (+9 more)
